touches to css to fix alignment issues

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -451,7 +451,7 @@ aside {
 .well-footer {
   font-size: 13px;
   margin-left: 58px;
-  margin-bottom: -11px;
+  margin-bottom: -12px;
 }
 
 .well-footer .collapse {
@@ -460,7 +460,7 @@ aside {
 
 .well-footer form {
   display: inline-block;
-  margin-bottom: -5px;
+  margin-bottom: -6px;
 }
 
 .well:hover {
@@ -498,7 +498,7 @@ aside {
 .shown {
   cursor: pointer;
   color: $grayLight;
-  vertical-align: 5px;
+  vertical-align: 6px;
 }
 
 .share-actions a {
@@ -979,7 +979,7 @@ aside {
 }
 
 [class^="icon-remove"], [class*=" icon-remove"] {
-  vertical-align: 2px;
+  vertical-align: 3px;
 }
 
 [class^="icon-heart"], [class*=" icon-heart"], [class^="icon-thumbs-up"], [class*=" icon-thumbs-up"] {
